[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulation-reporter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "matplotlib>=3.5",
    "numpy",
    "jinja2",
    "ltspice-runner @ git+https://github.com/snhobbs/ltspice-runner.git",
    "ltspice_to_svg @ git+https://github.com/snhobbs/ltspice_to_svg.git",
    "ltspice",
]

[project.scripts]
simulation-reporter = "simulation_reporter.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/simulation_reporter"]
